# xi-lang

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  mkdocs.yml  playground.jsx  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  fuzz.yml
.hypothesis/constants/: 8cedf131d0b8e622
bench/: ai_eval_harness.py  bench.py
docs/: faq.md  index.md
docs/api/: xi_compiler.md  xi_deserialize.md  xi_repl.md  xi_typecheck.md
docs/arch/: hardware.md  modules.md
docs/guide/: examples.md  quickstart.md  vscode.md
docs/spec/: binary.md  effects.md  types.md
editors/vscode/: package.json
examples/: BINARY_FORMAT.md  COMPARISON.md  EFFECT_SYSTEM.md  HARDWARE.md  README.md  SPECIFICATION.md  STDLIB.md  TYPE_SYSTEM.md  adt.xi-src  arithmetic_3_5_2.xi  compiled_hello.xi  docker-entrypoint.sh  fibonacci.xi-src  hello.xi-src  higher_order.xi-src  lambda_double_21.xi  option.xi-src  xi  xi_examples.py
examples/docs/: AI_USECASE.md
examples/examples/: README.md  church.xi-src  demo.xi-src  multidef.xi-src  string_concat.xi  strings.xi-src
examples/formal/: lakefile.lean
examples/hardware/: reduction_core.sv  xi_multicore.sv  xi_zynq_top.sv
hardware/: XI_MACHINE_SPEC.md
lib/: Prelude.xi-src
prompts/: ERRORS.md  PROMPT_SPEC.md
src/: xi.py  xi_compiler.py  xi_deserialize.py  xi_fuzz.py  xi_json.py  xi_module.py  xi_multicore.py  xi_server.py  xi_stdlib.py
tests/: test_ai_tools.py
(+48 files in other folders)
